--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="libs/underscore.js"></script>
     <script src="libs/backbone.js"></script>
     <script src="js/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css"></link>
   </head>
   <body>
   </body>
