--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <script src="libs/jquery.js"></script>
     <script src="libs/underscore.js"></script>
     <script src="libs/backbone.js"></script>
+    <script src="js/models/item.js"></script>
+    <script src="js/models/items.js"></script>
+    <script src="js/views/item_view.js"></script>
+    <script src="js/views/list_view.js"></script>
+    <script src="js/views/page_view.js"></script>
     <script src="js/app.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css"></link>
   </head>
